force-app/main/default/objects/Transaction_Data__c/Transaction_Data__c.object-meta.xml
<CustomObject>
    <!--
    -->
    <label>Transaction Data</label>
    <nameField>
        <label>Transaction Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>