force-app/main/default/objects/Transaction_Data__c/fields/Administration_Cost__c.field-meta.xml
<CustomField>
    <fullName>Administration_Cost__c</fullName>
    <label>Administration Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>