force-app/main/default/objects/Transaction_Data__c/fields/Asset_Section__c.field-meta.xml
<CustomField>
    <fullName>Asset_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Section</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Transactions Data (Asset Section)</relationshipLabel>
    <relationshipName>Transactions_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>