force-app/main/default/objects/Transaction_Data__c/fields/BPPDAN__c.field-meta.xml
<CustomField>
    <fullName>BPPDAN__c</fullName>
    <label>BPPDAN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>