force-app/main/default/objects/Transaction_Data__c/fields/BUSREQ_ID__c.field-meta.xml
<CustomField>
    <fullName>BUSREQ_ID__c</fullName>
    <label>BUSREQ_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>