force-app/main/default/objects/Transaction_Data__c/fields/Clause_Description__c.field-meta.xml
<CustomField>
    <fullName>Clause_Description__c</fullName>
    <label>Clause Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>