force-app/main/default/objects/Transaction_Data__c/fields/Clauses_Name__c.field-meta.xml
<CustomField>
    <fullName>Clauses_Name__c</fullName>
    <label>Clauses Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>