force-app/main/default/objects/Transaction_Data__c/fields/Co_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Co_Insurance_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co Insurance Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions Data (Co Insurance Company)</relationshipLabel>
    <relationshipName>Transactions_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>