force-app/main/default/objects/Transaction_Data__c/fields/Commission_Offered__c.field-meta.xml
<CustomField>
    <fullName>Commission_Offered__c</fullName>
    <label>Commission Offered</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>