force-app/main/default/objects/Transaction_Data__c/fields/Consignee_Beneficiary_Address__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Beneficiary_Address__c</fullName>
    <label>Consignee / Beneficiary Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>