force-app/main/default/objects/Transaction_Data__c/fields/Consignee_Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Beneficiary_Name__c</fullName>
    <label>Consignee / Beneficiary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>