force-app/main/default/objects/Transaction_Data__c/fields/Debit_Acc_Number__c.field-meta.xml
<CustomField>
    <fullName>Debit_Acc_Number__c</fullName>
    <label>Debit Acc Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>