force-app/main/default/objects/Transaction_Data__c/fields/Detail_Description__c.field-meta.xml
<CustomField>
    <fullName>Detail_Description__c</fullName>
    <label>Detail Description</label>
    <type>TextArea</type>
</CustomField>