force-app/main/default/objects/Transaction_Data__c/fields/Excess_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Excess_of_Loss__c</fullName>
    <label>Excess of Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>