force-app/main/default/objects/Transaction_Data__c/fields/Facoblig__c.field-meta.xml
<CustomField>
    <fullName>Facoblig__c</fullName>
    <label>Facoblig</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>