force-app/main/default/objects/Transaction_Data__c/fields/Facultative__c.field-meta.xml
<CustomField>
    <fullName>Facultative__c</fullName>
    <label>Facultative</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>