force-app/main/default/objects/Transaction_Data__c/fields/Folder_Status__c.field-meta.xml
<CustomField>
    <fullName>Folder_Status__c</fullName>
    <label>Folder Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>