force-app/main/default/objects/Transaction_Data__c/fields/Gross_Retention__c.field-meta.xml
<CustomField>
    <fullName>Gross_Retention__c</fullName>
    <label>Gross Retention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>