force-app/main/default/objects/Transaction_Data__c/fields/Id_Folder_Lintas__c.field-meta.xml
<CustomField>
    <fullName>Id_Folder_Lintas__c</fullName>
    <label>Id Folder Lintas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>