force-app/main/default/objects/Transaction_Data__c/fields/Id_SOO_Lintas__c.field-meta.xml
<CustomField>
    <fullName>Id_SOO_Lintas__c</fullName>
    <label>Id SOO Lintas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>