force-app/main/default/objects/Transaction_Data__c/fields/Insurance_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Period_Type__c</fullName>
    <label>Insurance Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Annual</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Short Term</label>
            </value>
            <value>
                <fullName>Long Term</fullName>
                <isActive>false</isActive>
                <label>Long Term</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>