force-app/main/default/objects/Transaction_Data__c/fields/Is_Additional__c.field-meta.xml
<CustomField>
    <fullName>Is_Additional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Additional</label>
    <type>Checkbox</type>
</CustomField>