force-app/main/default/objects/Transaction_Data__c/fields/Is_MLOP__c.field-meta.xml
<CustomField>
    <fullName>Is_MLOP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MLOP</label>
    <type>Checkbox</type>
</CustomField>