force-app/main/default/objects/Transaction_Data__c/fields/KARK__c.field-meta.xml
<CustomField>
    <fullName>KARK__c</fullName>
    <label>KARK</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>