force-app/main/default/objects/Transaction_Data__c/fields/Leader_Member__c.field-meta.xml
<CustomField>
    <fullName>Leader_Member__c</fullName>
    <label>Leader/Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
                <label>Leader</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Member</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>