force-app/main/default/objects/Transaction_Data__c/fields/Lintas_Id__c.field-meta.xml
<CustomField>
    <fullName>Lintas_Id__c</fullName>
    <label>Lintas Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>