force-app/main/default/objects/Transaction_Data__c/fields/Lintaswata_Sync__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lintaswata Sync</label>
    <type>Checkbox</type>
</CustomField>