force-app/main/default/objects/Transaction_Data__c/fields/Loan_Acc_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Acc_Number__c</fullName>
    <label>Loan Acc Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>