force-app/main/default/objects/Transaction_Data__c/fields/Master_Data__c.field-meta.xml
<CustomField>
    <fullName>Master_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clausa</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Transactions Data</relationshipLabel>
    <relationshipName>Transactions_Data</relationshipName>
    <type>Lookup</type>
</CustomField>