force-app/main/default/objects/Transaction_Data__c/fields/Member_Share__c.field-meta.xml
<CustomField>
    <fullName>Member_Share__c</fullName>
    <label>Member Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>