force-app/main/default/objects/Transaction_Data__c/fields/Offering_Id__c.field-meta.xml
<CustomField>
    <fullName>Offering_Id__c</fullName>
    <label>Offering Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>