force-app/main/default/objects/Transaction_Data__c/fields/Overriding__c.field-meta.xml
<CustomField>
    <fullName>Overriding__c</fullName>
    <label>Overriding</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>