force-app/main/default/objects/Transaction_Data__c/fields/Parent_Asset__c.field-meta.xml
<CustomField>
    <fullName>Parent_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Transactions Data</relationshipLabel>
    <relationshipName>Transactions_Data</relationshipName>
    <type>Lookup</type>
</CustomField>