force-app/main/default/objects/Transaction_Data__c/fields/Pool_Custom_BOND__c.field-meta.xml
<CustomField>
    <fullName>Pool_Custom_BOND__c</fullName>
    <label>Pool - Custom BOND</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>