force-app/main/default/objects/Transaction_Data__c/fields/Profit_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Profit_Sharing__c</fullName>
    <label>Profit Sharing</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>