force-app/main/default/objects/Transaction_Data__c/fields/QQ_Address__c.field-meta.xml
<CustomField>
    <fullName>QQ_Address__c</fullName>
    <label>QQ Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>