force-app/main/default/objects/Transaction_Data__c/fields/QQ_ID__c.field-meta.xml
<CustomField>
    <fullName>QQ_ID__c</fullName>
    <formula>QQ_Name__r.Client_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QQ ID</label>
    <type>Text</type>
</CustomField>