force-app/main/default/objects/Transaction_Data__c/fields/QQ_Name__c.field-meta.xml
<CustomField>
    <fullName>QQ_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QQ Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions Data</relationshipLabel>
    <relationshipName>Transactions_Data</relationshipName>
    <type>Lookup</type>
</CustomField>