force-app/main/default/objects/Transaction_Data__c/fields/Quota_Share__c.field-meta.xml
<CustomField>
    <fullName>Quota_Share__c</fullName>
    <label>Quota Share</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>