force-app/main/default/objects/Transaction_Data__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Transactions Data</relationshipLabel>
    <relationshipName>Transactions_Data</relationshipName>
    <type>Lookup</type>
</CustomField>