force-app/main/default/objects/Transaction_Data__c/fields/Recordtype_Developername__c.field-meta.xml
<CustomField>
    <fullName>Recordtype_Developername__c</fullName>
    <description>For Query in Flow</description>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recordtype Developername</label>
    <type>Text</type>
</CustomField>