force-app/main/default/objects/Transaction_Data__c/fields/Risk_Closing_Survey_Fee__c.field-meta.xml
<CustomField>
    <fullName>Risk_Closing_Survey_Fee__c</fullName>
    <label>Risk / Closing Survey Fee</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>