force-app/main/default/objects/Transaction_Data__c/fields/Schema_Type__c.field-meta.xml
<CustomField>
    <fullName>Schema_Type__c</fullName>
    <label>Schema Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sum Insured Adjustment</fullName>
            </value>
            <value>
                <fullName>Discounted Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>