force-app/main/default/objects/Transaction_Data__c/fields/Share_Offered__c.field-meta.xml
<CustomField>
    <fullName>Share_Offered__c</fullName>
    <label>Share Offered</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>