force-app/main/default/objects/Transaction_Data__c/fields/Share_Pending_Bending__c.field-meta.xml
<CustomField>
    <fullName>Share_Pending_Bending__c</fullName>
    <label>Share Pending Bending</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>