force-app/main/default/objects/Transaction_Data__c/fields/Short_Fall__c.field-meta.xml
<CustomField>
    <fullName>Short_Fall__c</fullName>
    <label>Short Fall</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>