force-app/main/default/objects/Transaction_Data__c/fields/Short_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Short_Period_Type__c</fullName>
    <label>Short Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Pro-Rata Basis</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>