force-app/main/default/objects/Transaction_Data__c/fields/Stamp_Duty__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty__c</fullName>
    <label>Stamp Duty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>