force-app/main/default/objects/Transaction_Data__c/fields/Sum_of_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Distribution__c</fullName>
    <label>Sum of Distribution</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>