force-app/main/default/objects/Transaction_Data__c/fields/Surplus__c.field-meta.xml
<CustomField>
    <fullName>Surplus__c</fullName>
    <label>Surplus</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>