force-app/main/default/objects/Transaction_Data__c/fields/Total_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Total_Rebate__c</fullName>
    <label>Total Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>