force-app/main/default/objects/Transaction_Data__c/fields/Transhipment_At__c.field-meta.xml
<CustomField>
    <fullName>Transhipment_At__c</fullName>
    <label>Transhipment At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>