force-app/main/default/objects/Transaction_Data__c/fields/Transhipment_Id__c.field-meta.xml
<CustomField>
    <fullName>Transhipment_Id__c</fullName>
    <label>Transhipment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>