force-app/main/default/objects/Transaction_Data__c/fields/TSI__c.field-meta.xml
<CustomField>
    <fullName>TSI__c</fullName>
    <label>TSI (100%)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>