force-app/main/default/objects/Transaction_Data__c/fields/TSI_WT_Accumulation__c.field-meta.xml
<CustomField>
    <fullName>TSI_WT_Accumulation__c</fullName>
    <label>TSI WT Accumulation</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>