force-app/main/default/objects/Transaction_Data__c/fields/Underlying_Retention__c.field-meta.xml
<CustomField>
    <fullName>Underlying_Retention__c</fullName>
    <label>Underlying Retention</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>