force-app/main/default/objects/Transaction_Data__c/fields/Vessel_Aircraft_Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Aircraft_Carrier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel/Aircraft/Carrier Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Vessel Name</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Transactions Data (Vessel/Aircraft/Carrier Name)</relationshipLabel>
    <relationshipName>Transactions_Data3</relationshipName>
    <type>Lookup</type>
</CustomField>