force-app/main/default/objects/Transaction_Data__c/fields/Vessel_Aircraft_Carrier_Number__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Aircraft_Carrier_Number__c</fullName>
    <label>Vessel/Aircraft/Carrier Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>