force-app/main/default/objects/Transaction_Data__c/recordTypes/CoInsurer.recordType-meta.xml
<RecordType>
    <fullName>CoInsurer</fullName>
    <active>true</active>
    <label>Co-Insurer</label>
</RecordType>