force-app/main/default/objects/Transaction_Data__c/recordTypes/Consignee_Beneficiary.recordType-meta.xml
<RecordType>
    <fullName>Consignee_Beneficiary</fullName>
    <active>true</active>
    <label>Consignee / Beneficiary</label>
</RecordType>