force-app/main/default/objects/Transaction_Data__c/recordTypes/Facultative_Folder.recordType-meta.xml
<RecordType>
    <fullName>Facultative_Folder</fullName>
    <active>true</active>
    <label>Facultative Folder</label>
</RecordType>