force-app/main/default/objects/Transaction_Data__c/recordTypes/Facultative_SOO.recordType-meta.xml
<RecordType>
    <fullName>Facultative_SOO</fullName>
    <active>true</active>
    <label>Facultative SOO</label>
</RecordType>