force-app/main/default/objects/Transaction_Data__c/recordTypes/Installment.recordType-meta.xml
<RecordType>
    <fullName>Installment</fullName>
    <active>true</active>
    <label>Installment</label>
</RecordType>