force-app/main/default/objects/Transaction_Data__c/recordTypes/Insurance_Period.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Period</fullName>
    <active>true</active>
    <label>Insurance Period</label>
</RecordType>