force-app/main/default/objects/Transaction_Data__c/recordTypes/Member_of_QQ.recordType-meta.xml
<RecordType>
    <fullName>Member_of_QQ</fullName>
    <active>true</active>
    <label>Member of QQ</label>
</RecordType>