force-app/main/default/objects/Transaction_Data__c/recordTypes/Transhipment.recordType-meta.xml
<RecordType>
    <fullName>Transhipment</fullName>
    <active>true</active>
    <label>Transhipment</label>
</RecordType>