force-app/main/default/objects/Transaction_Data__c/recordTypes/Treaty_Distribution.recordType-meta.xml
<RecordType>
    <fullName>Treaty_Distribution</fullName>
    <active>true</active>
    <label>Treaty Distribution</label>
</RecordType>