force-app/main/default/objects/Transaction_Data__c/listViews/All_All.listView-meta.xml
<ListView>
    <fullName>All_All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>QQ_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Clause_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All - All</label>
</ListView>