force-app/main/default/objects/Transaction_Data__c/listViews/Insurance_Periode_Transaction_Data.listView-meta.xml
<ListView>
    <fullName>Insurance_Periode_Transaction_Data</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Year__c</columns>
    <columns>Schema_Type__c</columns>
    <columns>Insurance_Period_Type__c</columns>
    <columns>Short_Period_Type__c</columns>
    <columns>Value__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Transaction_Data__c.Insurance_Period</value>
    </filters>
    <label>Insurance Periode Transaction Data</label>
</ListView>